# AI_LEARNINGS

./: .env.example  .gitignore  README.md  deep_research.py  pyproject.toml
crew/coder/: README.md
crew/coder/output/: solution.md
crew/coder/sandbox/: solution.py
crew/coder/src/coder/: crew.py  main.py
crew/coder/src/coder/config/: agents.yaml
crew/coder/src/coder/tools/: __init__.py  sandbox_tools.py
crew/debate/: README.md
crew/debate/output/: decide.md  oppose.md  propose.md
crew/debate/src/debate/: crew.py  main.py
crew/debate/src/debate/config/: tasks.yaml
crew/engineering_team/: README.md
crew/engineering_team/src/engineering_team/: crew.py  main.py
crew/engineering_team/src/engineering_team/config/: agents.yaml
crew/engineering_team/src/engineering_team/tools/: sandbox_tools.py
crew/financial_researcher/: README.md
crew/financial_researcher/output/: report.md
crew/financial_researcher/src/financial_researcher/: crew.py  main.py
crew/financial_researcher/src/financial_researcher/config/: tasks.yaml
crew/stock_picker/: README.md
crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
crew/stock_picker/src/stock_picker/: crew.py  main.py
crew/stock_picker/src/stock_picker/config/: agents.yaml
crew/stock_picker/src/stock_picker/tools/: __init__.py  push_tool.py
